--- a/fakecam/Dockerfile
+++ b/fakecam/Dockerfile
@@ -3,6 +3,7 @@ FROM debian:bullseye
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
       python3 \
+      python3-bottle \
       python3-pip \
       python3-numpy \
       python3-opencv \
@@ -13,6 +14,6 @@ RUN pip3 install --no-cache-dir pyfakewebcam
 
 WORKDIR /src
 
-COPY foreground.jpg foreground-mask.png background.jpg fake.py /src/
+COPY fake.py /src/
 
 ENTRYPOINT python3 -u fake.py
