clean up image handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
         read_only: true
         volumes:
             - ./images:/data/images:ro
+            - ./fakecam/static:/data/static:ro
         devices:
             # input (webcam)
             - /dev/video0:/dev/video0
